--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
-body {
+html, body {
   margin: 0;
+  padding:0;
+  overflow-x: hidden;
   font-family: "Montserrat";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
